[package]
name = "runix"
version = "0.1.0"
authors = ["undersquire"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dirs = "4.0.0"
rustyline = "9.0.0"

[profile.release]
lto = true
opt-level = "z"
codegen-units = 1
panic = "abort"